--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Document</title>
   <link rel="stylesheet" href="assets/style.css">
   <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');" </head>
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');" 
+  </head>
 
 <body>
   <section class="cabecalho">
