--- a/index.html
+++ b/index.html
@@ -30,7 +30,136 @@
 
   </section>
 
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SEGUNDO PROJETO</title>
+    <link rel="stylesheet" href="css/trimestre.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+</head>
+
+<body>
+    <header class="cabecalho">
+        <div class="container">
+            <input type="checkbox" id="menu" class="seletor-menu">
+            <label for="menu">
+                <span class="menu-hamburguer"></span>
+            </label>
+            <ul class="menu-lista">
+                <li class="menu-lista-titulo">CATEGORIAS</li>
+                <li class="menu-lista-item"><a href="#" menu-lista-link>Programação</a></li>
+                <li class="menu-lista-item"><a href="#" menu-lista-link>Front-end</a></li>
+                <li class="menu-lista-item"><a href="#" menu-lista-link>Infraestrutura</a></li>
+                <li class="menu-lista-item"><a href="#" menu-lista-link>Business</a></li>
+                <li class="menu-lista-item"><a href="#" menu-lista-link>Design e UK</a></li>
+            </ul>
+
+            <img src="imagem/Logo.svg" alt="">
+        </div>
+        <div class="container">
+            <a href="#"><img src="imagem/Favoritos.svg" alt=""></a>
+            <a href="#"><img src="imagem/Compras.svg" alt=""></a>
+            <a href="#"><img src="imagem/Usuário.svg" alt=""></a>
+        </div>
+    </header>
+    <section class="banner">
+        <h2 class="banner-titulo">Já sabe por onde começar?</h2>
+        <p class="banner-texto">Encotre em nossa estante o que precisa para seu desenvolvimento</p>
+        <input class="banner-pesquisa" type="search" placeholder="Qual será sua próxima leitura" id="">
+    </section>
+
+    <section class="carrossel">
+        <h2 class="carrossel-título">
+            Novos lançamentos
+        </h2>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="imagem/ApacheKafka.png" alt=""></div>
+                <div class="swiper-slide"><img src="imagem/Liderança.png" alt=""></div>
+                <div class="swiper-slide"><img src="imagem/Javascript.png" alt=""></div>
+                <div class="swiper-slide"><img src="imagem/Guia Front-end.png" alt=""></div>
+                <div class="swiper-slide"><img src="imagem/Portugol.png" alt=""></div>
+                <div class="swiper-slide"><img src="imagem/Nodejs.svg" alt=""></div>
+
+            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-scrollbar"></div>
+        </div>
+        <div class="card">
+            <div class="card-descricao">
+                <div class="descricao">
+                    <h3 class="descricao-titulo">Talvez você também se interessa por...
+                    </h3>
+                    <h2 class="descricao-titulo-livro"> Angular 11 e Firebase</h2>
+                    <p class="descricao-texto"> Construindo uma aplicação integrada com a plataforma da Google</p>
+                </div>
+                <img src="imagem/Angular.png" alt="Imagem do A">
+            </div>
+            <div class="card-botoes">
+                <ul class="botoes">
+                    <li class="botoes-item"><img src="imagem/Favoritos.svg"></li>
+                    <li class="botoes-item"><img src="imagem/Compras.svg" alt=""></li>
+                </ul>
+                <a href="#" class="botoes-ancora">Saiba mais</a>
+            </div>
+        </div>
+        </div>
+
+    </section>
+
+    <section class="topicos">
+        <h2 class="topicos-titulo">Tópicos visitados recentemente</h2>
+        <ul class="topicos-lista">
+            <li class="topicos-item"><a href="#" class="topicos-link">Android</a></li>
+            <li class="topicos-item"><a href="#" class="topicos-link">Marketing Digital</a></li>
+            <li class="topicos-item"><a href="#" class="topicos-link">Agile</a></li>
+            <li class="topicos-item"><a href="#" class="topicos-link">Startups</a></li>
+            <li class="topicos-item"><a href="#" class="topicos-link">HTML & CS</a></li>
+            <li class="topicos-item"><a href="#" class="topicos-link">Python</a></li>
+            <li class="topicos-item"><a href="#" class="topicos-link">OO</a></li>
+            <li class="topicos-item"><a href="#" class="topicos-link">Java</a></li>
+
+        </ul>
+<section class="contato">
+    <h2 class="contato-titulo">Fique por dentro das novidades</h2>
+    <p class="contato-texto">Atualizações e e-books, novos livros, promoções e outros</p>
+    <input type="email" class="contato-email" placeholder="Cadastre seu email">
+</section>
+    </section>
+    <hr>
+    <footer class="rodape">
+        <h2 class="rodape-titulo">Criado por Anna e Kayke</h2>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination:{
+                el: '.swiper-pagination',
+                type: 'bullets',
+            }
+
+        },
+        );
+    </script>
+</body>
+
+
+
+</html>
 </body>
 
 </html>
