Atualizar o index.html
kayke última chance

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 ,<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEGUNDO PROJETO</title>
+    <title>A RELAÇÃO CIDADE E O CAMPO</title>
     <link rel="stylesheet" href="css/trimestre.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -73,13 +73,13 @@
     </header>
     <section class="banner">
         <h2 class="banner-titulo">Já sabe por onde começar?</h2>
-        <p class="banner-texto">Encotre em nossa estante o que precisa para seu desenvolvimento</p>
-        <input class="banner-pesquisa" type="search" placeholder="Qual será sua próxima leitura" id="">
+        <p class="banner-texto">Encotre em nosso site o que você precisa para seu desenvolvimento no mercado maringaense</p>
+        <input class="banner-pesquisa" type="search" placeholder="Qual será sua próxima parceria ou investimento" id="">
     </section>
 
     <section class="carrossel">
         <h2 class="carrossel-título">
-            Novos lançamentos
+          Novos empreendimentos e parcerias
         </h2>
         <div class="swiper">
             <div class="swiper-wrapper">
@@ -99,10 +99,10 @@
         <div class="card">
             <div class="card-descricao">
                 <div class="descricao">
-                    <h3 class="descricao-titulo">Talvez você também se interessa por...
+                    <h3 class="descricao-titulo">Talvez você também espera que o mercado seja.....
                     </h3>
                     <h2 class="descricao-titulo-livro"> Angular 11 e Firebase</h2>
-                    <p class="descricao-texto"> Construindo uma aplicação integrada com a plataforma da Google</p>
+                    <p class="descricao-texto"> Construindo um site integrado com o mercado maringaense</p>
                 </div>
                 <img src="imagem/Angular.png" alt="Imagem do A">
             </div>
@@ -134,12 +134,12 @@
 <section class="contato">
     <h2 class="contato-titulo">Fique por dentro das novidades</h2>
     <p class="contato-texto">Atualizações e e-books, novos livros, promoções e outros</p>
-    <input type="email" class="contato-email" placeholder="Cadastre seu email">
+    <input type="email" class="contato-email" placeholder="Cadastre seus produtos e empreendimentos">
 </section>
     </section>
     <hr>
     <footer class="rodape">
-        <h2 class="rodape-titulo">Criado por Anna e Kayke</h2>
+        <h2 class="rodape-titulo">Criado por Kayke</h2>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
