--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <span class="menu-hamburguer"></span>
             </label>
             <ul class="menu-lista">
-                <li class="menu-lista-titulo">CATEGORIAS</li>
+                <li class="menu-lista-titulo">CAMPO E CIDADE</li>
                 <li class="menu-lista-item"><a href="#" menu-lista-link>Programação</a></li>
                 <li class="menu-lista-item"><a href="#" menu-lista-link>Front-end</a></li>
                 <li class="menu-lista-item"><a href="#" menu-lista-link>Infraestrutura</a></li>
